gcc/testsuite/rust/rustc/ui/rfcs/rfc-2632-const-trait-impl/const_derives/derive-const-gate.rs
#[derive_const(Default)] // { dg-error ".E0658." "" { target *-*-* } }
// { dg-error ".E0658." "" { target *-*-* } .-1 }
pub struct S;

fn main() {}

